test/spec/if.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/if.wast
(;; STDOUT ;;;
out/test/spec/if.wast:585: assert_trap passed: undefined table index
out/test/spec/if.wast:726: assert_malformed passed:
  out/test/spec/if/if.1.wat:1:95: error: unexpected token "param", expected then block (e.g. (then ...)).
  ...i32.const 0)  (if (type $sig) (result i32) (param i32) (i32.const 1) (then)))
                                                 ^^^^^
  out/test/spec/if/if.1.wat:1:121: error: unexpected token "then", expected an instr.
  ...i32.const 0)  (if (type $sig) (result i32) (param i32) (i32.const 1) (then)))
                                                                           ^^^^
out/test/spec/if.wast:735: assert_malformed passed:
  out/test/spec/if/if.2.wat:1:82: error: unexpected token "type", expected then block (e.g. (then ...)).
  ...nc (i32.const 0)  (if (param i32) (type $sig) (result i32) (i32.const 1) (...
                                        ^^^^
  out/test/spec/if/if.2.wat:1:121: error: unexpected token "then", expected an instr.
  ...i32.const 0)  (if (param i32) (type $sig) (result i32) (i32.const 1) (then)))
                                                                           ^^^^
out/test/spec/if.wast:744: assert_malformed passed:
  out/test/spec/if/if.3.wat:1:95: error: unexpected token "type", expected then block (e.g. (then ...)).
  ...i32.const 0)  (if (param i32) (result i32) (type $sig) (i32.const 1) (then)))
                                                 ^^^^
  out/test/spec/if/if.3.wat:1:121: error: unexpected token "then", expected an instr.
  ...i32.const 0)  (if (param i32) (result i32) (type $sig) (i32.const 1) (then)))
                                                                           ^^^^
out/test/spec/if.wast:753: assert_malformed passed:
  out/test/spec/if/if.4.wat:1:83: error: unexpected token "type", expected then block (e.g. (then ...)).
  ...c (i32.const 0)  (if (result i32) (type $sig) (param i32) (i32.const 1) (t...
                                        ^^^^
  out/test/spec/if/if.4.wat:1:121: error: unexpected token "then", expected an instr.
  ...i32.const 0)  (if (result i32) (type $sig) (param i32) (i32.const 1) (then)))
                                                                           ^^^^
out/test/spec/if.wast:762: assert_malformed passed:
  out/test/spec/if/if.5.wat:1:83: error: unexpected token "param", expected then block (e.g. (then ...)).
  ...c (i32.const 0)  (if (result i32) (param i32) (type $sig) (i32.const 1) (t...
                                        ^^^^^
  out/test/spec/if/if.5.wat:1:121: error: unexpected token "then", expected an instr.
  ...i32.const 0)  (if (result i32) (param i32) (type $sig) (i32.const 1) (then)))
                                                                           ^^^^
out/test/spec/if.wast:771: assert_malformed passed:
  out/test/spec/if/if.6.wat:1:39: error: unexpected token "param", expected then block (e.g. (then ...)).
  (func (i32.const 0) (if (result i32) (param i32) (i32.const 1) (then)))
                                        ^^^^^
  out/test/spec/if/if.6.wat:1:65: error: unexpected token "then", expected an instr.
  (func (i32.const 0) (if (result i32) (param i32) (i32.const 1) (then)))
                                                                  ^^^^
out/test/spec/if.wast:778: assert_malformed passed:
  out/test/spec/if/if.7.wat:1:47: error: unexpected token $x, expected ).
  ...(i32.const 0) (i32.const 1)  (if (param $x i32) (then (drop)) (else (drop))))
                                             ^^
  out/test/spec/if/if.7.wat:1:69: error: unexpected token (, expected EOF.
  ...(i32.const 0) (i32.const 1)  (if (param $x i32) (then (drop)) (else (drop))))
                                                                   ^
out/test/spec/if.wast:786: assert_malformed passed:
  out/test/spec/if/if.8.wat:1:40: error: expected 0 results, got 1
  (type $sig (func))(func (i32.const 1)  (if (type $sig) (result i32) (then (i3...
                                         ^
out/test/spec/if.wast:796: assert_malformed passed:
  out/test/spec/if/if.9.wat:1:65: error: expected 1 arguments, got 0
  ...) (result i32)))(func (i32.const 1)  (if (type $sig) (result i32) (then (i...
                                          ^
out/test/spec/if.wast:806: assert_malformed passed:
  out/test/spec/if/if.10.wat:1:79: error: expected 1 results, got 0
  ...))(func (i32.const 0) (i32.const 1)  (if (type $sig) (param i32) (then (dr...
                                          ^
out/test/spec/if.wast:816: assert_malformed passed:
  out/test/spec/if/if.11.wat:1:83: error: expected 2 arguments, got 1
  ...))(func (i32.const 0) (i32.const 1)  (if (type $sig) (param i32) (result i...
                                          ^
out/test/spec/if.wast:826: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  000001f: error: EndFunctionBody callback failed
out/test/spec/if.wast:834: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:838: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:842: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:846: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:851: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:855: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:859: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:863: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000001e: error: EndFunctionBody callback failed
out/test/spec/if.wast:868: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  000001e: error: OnEndExpr callback failed
out/test/spec/if.wast:874: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  000001e: error: OnEndExpr callback failed
out/test/spec/if.wast:880: assert_invalid passed:
  error: type mismatch in if false branch, expected [] but got [i32]
  000001f: error: OnEndExpr callback failed
out/test/spec/if.wast:886: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  000001e: error: OnElseExpr callback failed
out/test/spec/if.wast:893: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32, i32]
  0000020: error: OnEndExpr callback failed
out/test/spec/if.wast:899: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32, i32]
  0000020: error: OnEndExpr callback failed
out/test/spec/if.wast:905: assert_invalid passed:
  error: type mismatch in if false branch, expected [] but got [i32, i32]
  0000021: error: OnEndExpr callback failed
out/test/spec/if.wast:911: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32, i32]
  0000020: error: OnElseExpr callback failed
out/test/spec/if.wast:918: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001d: error: OnElseExpr callback failed
out/test/spec/if.wast:924: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got []
  000001f: error: OnEndExpr callback failed
out/test/spec/if.wast:930: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001d: error: OnEndExpr callback failed
out/test/spec/if.wast:937: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got []
  000001e: error: OnElseExpr callback failed
out/test/spec/if.wast:943: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32, i32] but got []
  0000022: error: OnEndExpr callback failed
out/test/spec/if.wast:949: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got []
  000001e: error: OnEndExpr callback failed
out/test/spec/if.wast:956: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got []
  000001f: error: OnEndExpr callback failed
out/test/spec/if.wast:962: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32, i32] but got []
  0000022: error: OnEndExpr callback failed
out/test/spec/if.wast:969: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001e: error: OnElseExpr callback failed
out/test/spec/if.wast:975: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got []
  0000021: error: OnEndExpr callback failed
out/test/spec/if.wast:981: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got []
  000001e: error: OnElseExpr callback failed
out/test/spec/if.wast:988: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got []
  000001f: error: OnElseExpr callback failed
out/test/spec/if.wast:994: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32, i32] but got []
  0000024: error: OnEndExpr callback failed
out/test/spec/if.wast:1000: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got []
  000001f: error: OnElseExpr callback failed
out/test/spec/if.wast:1007: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/test/spec/if.wast:1013: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32] but got [i64]
  0000022: error: OnEndExpr callback failed
out/test/spec/if.wast:1019: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/test/spec/if.wast:1026: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got [i32]
  0000020: error: OnElseExpr callback failed
out/test/spec/if.wast:1032: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32, i32] but got [i32]
  0000025: error: OnEndExpr callback failed
out/test/spec/if.wast:1038: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got [i32]
  0000020: error: OnElseExpr callback failed
out/test/spec/if.wast:1045: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got [i32]
  0000022: error: OnElseExpr callback failed
out/test/spec/if.wast:1052: assert_invalid passed:
  error: type mismatch in if false branch, expected [i32, i32] but got [i32]
  0000027: error: OnEndExpr callback failed
out/test/spec/if.wast:1059: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got [i32]
  0000022: error: OnElseExpr callback failed
out/test/spec/if.wast:1067: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  0000021: error: OnElseExpr callback failed
out/test/spec/if.wast:1073: assert_invalid passed:
  error: type mismatch in if false branch, expected [] but got [i32]
  0000024: error: OnEndExpr callback failed
out/test/spec/if.wast:1079: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  0000021: error: OnElseExpr callback failed
out/test/spec/if.wast:1086: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32] but got [i64]
  000001f: error: OnElseExpr callback failed
out/test/spec/if.wast:1092: assert_invalid passed:
  error: type mismatch in if true branch, expected [] but got [i32]
  0000024: error: OnElseExpr callback failed
out/test/spec/if.wast:1099: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000025: error: EndFunctionBody callback failed
out/test/spec/if.wast:1109: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000025: error: EndFunctionBody callback failed
out/test/spec/if.wast:1119: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got [i64]
  0000027: error: EndFunctionBody callback failed
out/test/spec/if.wast:1130: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/if.wast:1136: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000021: error: OnBrExpr callback failed
out/test/spec/if.wast:1142: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/if.wast:1148: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  0000024: error: OnBrExpr callback failed
out/test/spec/if.wast:1155: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001e: error: OnBrExpr callback failed
out/test/spec/if.wast:1164: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000021: error: OnBrExpr callback failed
out/test/spec/if.wast:1173: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/if.wast:1182: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  0000024: error: OnBrExpr callback failed
out/test/spec/if.wast:1192: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  000001f: error: OnBrExpr callback failed
out/test/spec/if.wast:1201: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got []
  0000022: error: OnBrExpr callback failed
out/test/spec/if.wast:1210: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  0000020: error: OnBrExpr callback failed
out/test/spec/if.wast:1219: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got []
  0000025: error: OnBrExpr callback failed
out/test/spec/if.wast:1229: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000020: error: OnBrExpr callback failed
out/test/spec/if.wast:1238: assert_invalid passed:
  error: type mismatch in br, expected [i32] but got [i64]
  0000023: error: OnBrExpr callback failed
out/test/spec/if.wast:1247: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i64]
  0000021: error: OnBrExpr callback failed
out/test/spec/if.wast:1256: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i64]
  0000026: error: OnBrExpr callback failed
out/test/spec/if.wast:1265: assert_invalid passed:
  error: type mismatch in br, expected [i32, i32] but got [i64]
  0000023: error: OnBrExpr callback failed
out/test/spec/if.wast:1275: assert_invalid passed:
  error: type mismatch in if true branch, expected [i32, i32] but got [i32]
  0000022: error: OnElseExpr callback failed
out/test/spec/if.wast:1286: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000019: error: OnIfExpr callback failed
out/test/spec/if.wast:1294: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001d: error: OnIfExpr callback failed
out/test/spec/if.wast:1303: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001d: error: OnIfExpr callback failed
out/test/spec/if.wast:1312: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001f: error: OnIfExpr callback failed
out/test/spec/if.wast:1321: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000022: error: OnIfExpr callback failed
out/test/spec/if.wast:1331: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001d: error: OnIfExpr callback failed
out/test/spec/if.wast:1340: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001d: error: OnIfExpr callback failed
out/test/spec/if.wast:1349: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001d: error: OnIfExpr callback failed
out/test/spec/if.wast:1358: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000019: error: OnIfExpr callback failed
out/test/spec/if.wast:1366: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000019: error: OnIfExpr callback failed
out/test/spec/if.wast:1374: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001f: error: OnIfExpr callback failed
out/test/spec/if.wast:1383: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000036: error: OnIfExpr callback failed
out/test/spec/if.wast:1399: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001b: error: OnIfExpr callback failed
out/test/spec/if.wast:1408: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001b: error: OnIfExpr callback failed
out/test/spec/if.wast:1417: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000021: error: OnIfExpr callback failed
out/test/spec/if.wast:1426: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001e: error: OnIfExpr callback failed
out/test/spec/if.wast:1435: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001e: error: OnIfExpr callback failed
out/test/spec/if.wast:1444: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001e: error: OnIfExpr callback failed
out/test/spec/if.wast:1454: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  000001f: error: OnIfExpr callback failed
out/test/spec/if.wast:1460: assert_invalid passed:
  error: type mismatch in if, expected [i32, f64] but got []
  0000020: error: OnIfExpr callback failed
out/test/spec/if.wast:1466: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got [f32]
  0000024: error: OnIfExpr callback failed
out/test/spec/if.wast:1472: assert_invalid passed:
  error: type mismatch in if, expected [f32, i32] but got [f32]
  0000025: error: OnIfExpr callback failed
out/test/spec/if.wast:1478: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got []
  0000021: error: OnIfExpr callback failed
out/test/spec/if.wast:1484: assert_invalid passed:
  error: type mismatch in if, expected [i32, f64] but got []
  0000022: error: OnIfExpr callback failed
out/test/spec/if.wast:1490: assert_invalid passed:
  error: type mismatch in if, expected [i32] but got [f32]
  0000026: error: OnIfExpr callback failed
out/test/spec/if.wast:1496: assert_invalid passed:
  error: type mismatch in if, expected [f32, i32] but got [f32]
  0000027: error: OnIfExpr callback failed
out/test/spec/if.wast:1503: assert_malformed passed:
  out/test/spec/if/if.104.wat:1:42: error: unexpected token $x, expected ).
  (func (param i32) (result i32) if (param $x i32) end)
                                           ^^
out/test/spec/if.wast:1507: assert_malformed passed:
  out/test/spec/if/if.105.wat:1:43: error: unexpected token $x, expected ).
  (func (param i32) (result i32) (if (param $x i32) (then)))
                                            ^^
out/test/spec/if.wast:1512: assert_malformed passed:
  out/test/spec/if/if.106.wat:1:26: error: unexpected label "$l"
  (func i32.const 0 if end $l)
                           ^^
out/test/spec/if.wast:1516: assert_malformed passed:
  out/test/spec/if/if.107.wat:1:29: error: mismatching label "$a" != "$l"
  (func i32.const 0 if $a end $l)
                              ^^
out/test/spec/if.wast:1520: assert_malformed passed:
  out/test/spec/if/if.108.wat:1:27: error: unexpected label "$l"
  (func i32.const 0 if else $l end)
                            ^^
out/test/spec/if.wast:1524: assert_malformed passed:
  out/test/spec/if/if.109.wat:1:30: error: mismatching label "$a" != "$l"
  (func i32.const 0 if $a else $l end)
                               ^^
out/test/spec/if.wast:1528: assert_malformed passed:
  out/test/spec/if/if.110.wat:1:31: error: unexpected label "$l"
  (func i32.const 0 if else end $l)
                                ^^
out/test/spec/if.wast:1532: assert_malformed passed:
  out/test/spec/if/if.111.wat:1:27: error: unexpected label "$l"
  (func i32.const 0 if else $l end $l)
                            ^^
  out/test/spec/if/if.111.wat:1:34: error: unexpected label "$l"
  (func i32.const 0 if else $l end $l)
                                   ^^
out/test/spec/if.wast:1536: assert_malformed passed:
  out/test/spec/if/if.112.wat:1:27: error: unexpected label "$l1"
  (func i32.const 0 if else $l1 end $l2)
                            ^^^
  out/test/spec/if/if.112.wat:1:35: error: unexpected label "$l2"
  (func i32.const 0 if else $l1 end $l2)
                                    ^^^
out/test/spec/if.wast:1540: assert_malformed passed:
  out/test/spec/if/if.113.wat:1:34: error: mismatching label "$a" != "$l"
  (func i32.const 0 if $a else end $l)
                                   ^^
out/test/spec/if.wast:1544: assert_malformed passed:
  out/test/spec/if/if.114.wat:1:37: error: mismatching label "$a" != "$l"
  (func i32.const 0 if $a else $a end $l)
                                      ^^
out/test/spec/if.wast:1548: assert_malformed passed:
  out/test/spec/if/if.115.wat:1:30: error: mismatching label "$a" != "$l"
  (func i32.const 0 if $a else $l end $l)
                               ^^
  out/test/spec/if/if.115.wat:1:37: error: mismatching label "$a" != "$l"
  (func i32.const 0 if $a else $l end $l)
                                      ^^
238/238 tests passed.
;;; STDOUT ;;)
